nsis_build_log.txt
  • electron-builder  version=26.5.0 os=10.0.26200
  • loaded configuration  file=C:\software\cyberdocgen\electron-builder.yml
  • description is missed in the package.json  appPackageFile=C:\software\cyberdocgen\package.json
  • author is missed in the package.json  appPackageFile=C:\software\cyberdocgen\package.json
  • executing @electron/rebuild  electronVersion=40.0.0 arch=x64 buildFromSource=false workspaceRoot=C:\software\cyberdocgen projectDir=./ appDir=./
  • installing native dependencies  arch=x64
  ⨯ file:///C:/software/cyberdocgen/node_modules/@electron/rebuild/lib/clang-fetcher.js:5
import tar from 'tar';
       ^^^

SyntaxError: 
1. The requested module 'tar' does not provide an export named 'default'
2. Unexpected status of a module that is imported again after being required. Status = 0
This is caused by either a bug in Node.js or incorrect usage of Node.js internals.
Please open an issue with this stack trace at https://github.com/nodejs/node/issues

    at ModuleJobSync.runSync (node:internal/modules/esm/module_job:436:37)
    at ModuleLoader.importSyncForRequire (node:internal/modules/esm/loader:429:47)
    at loadESMFromCJS (node:internal/modules/cjs/loader:1519:24)
    at Module._compile (node:internal/modules/cjs/loader:1670:5)
    at Object..js (node:internal/modules/cjs/loader:1820:10)
    at Module.load (node:internal/modules/cjs/loader:1423:32)
    at Function._load (node:internal/modules/cjs/loader:1246:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1445:12)

Node.js v22.18.0

  ⨯ Rebuilder failed with exit code: 1  failedTask=build stackTrace=Error: Rebuilder failed with exit code: 1
    at ChildProcess.<anonymous> (C:\software\cyberdocgen\node_modules\app-builder-lib\src\util\rebuild.ts:55:32)
    at ChildProcess.emit (node:events:518:28)
    at Process.ChildProcess._handle.onexit (node:internal/child_process:293:12)
